--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server --open",
+    "start": "webpack-dev-server -d --open ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
